@@ -34,6 +34,7 @@ import etomo.type.DataFileType;
 import etomo.type.DialogType;
 import etomo.type.DirectiveFileType;
 import etomo.type.EtomoNumber;
+import etomo.type.ImodVersion;
 import etomo.type.JoinMetaData;
 import etomo.type.MetaData;
 import etomo.type.ParallelMetaData;
@@ -365,7 +366,7 @@ public class EtomoDirector {
     System.err.println("GraphicsEnvironment.isHeadless()="
         + GraphicsEnvironment.isHeadless());
     // print versions
-    System.err.println("\neTomo version:  " + VersionControl.getEtomoVersion());
+    System.err.println("\neTomo version:  " + ImodVersion.CURRENT_VERSION + " " + VersionControl.TIME_STAMP);
     List<String> imodInfo = VersionControl.getImodInfo(null);
     if (imodInfo != null && imodInfo.size() > 0) {
       System.err.println("IMOD Version: " + imodInfo.get(0));
